# dark-factory

./: .dockerignore  .gitignore  .prototools  AGENTS.md  Cargo.toml  README.md  STYLE.md  TODO.md  opencode.jsonc  prisma.config.ts
.devcontainer/: devcontainer.json
.moon/: toolchains.yml  workspace.yml
.opencode/agents/: designer.md  developer_jr.md  developer_senior.md  gitter.md  planner.md  reflector.md  sweeper.md  tsc-fixer.md
.opencode/commands/: adhd.md  commit_all.md  rule.md  (+12 more)
core/: README.md  moon.yml  package.json  tsconfig.json
dark_core/: .prettierignore  README.md  config.toml  moon.yml  package.json
docker/: Dockerfile  README.md  compose.devcontainers.yml
frontends/dark_chat/: Cargo.toml  README.md  moon.yml
frontends/dark_chat/src/: cli.rs  lib.rs  main.rs
frontends/dark_chat/src/core/: backend.rs  mod.rs  systems.rs  types.rs
frontends/dark_chat/src/framework/: autocomplete.rs  composer.rs  conversation_panel.rs  message_renderer.rs  message_types.rs  mod.rs  model_selector.rs  session_tree.rs
frontends/dark_chat/src/providers/: mod.rs  opencode_extract.rs  opencode_realtime.rs  opencode_server.rs  opencode_transport.rs  opencode_wire.rs  provider.rs
frontends/dark_chat/src/tui/: app.rs  commands.rs  input.rs  mod.rs  realtime.rs
frontends/dark_chat/src/tui/app/: mod.rs  state.rs
frontends/dark_chat/src/tui/components/: keybinds.rs  message_adapter.rs  mod.rs
frontends/dark_chat/src/tui/panels/: chat_panel.rs  footer_panel.rs  header_panel.rs  key_bar_panel.rs  mod.rs  sessions_panel.rs  status_panel.rs
frontends/dark_chat/src/tui/panels/snapshots/: dark_chat__tui__panels__chat_panel__tests__chat_panel_agent_selector_open.snap  dark_chat__tui__panels__chat_panel__tests__chat_panel_default.snap  dark_chat__tui__panels__chat_panel__tests__chat_panel_model_selector_open.snap
frontends/dark_chat/src/tui/views/: main_view.rs  mod.rs
frontends/dark_cli/: AGENTS.md  Cargo.toml  PLANNING.md  README.md  TODO.md  build.rs
frontends/dark_cli/src/: api.rs  cli.rs  errors.rs  logging.rs  main.rs  output.rs  runner.rs
frontends/dark_tui/: AGENTS.md  Cargo.toml  README.md  moon.yml
frontends/dark_tui/src/: app.rs  cli.rs  logging.rs  main.rs  models.rs  service.rs  service_convert.rs  service_wire.rs  theme.rs
frontends/dark_tui/src/app/: mod.rs  state.rs
frontends/dark_tui/src/ui/: command_palette.rs  mod.rs
frontends/dark_tui/src/ui/render/: mod.rs
frontends/dark_tui/src/ui/render/components/: card_grid_component.rs  key_hint_bar.rs  labeled_field.rs  loading_spinner.rs  mod.rs  pane_block_component.rs  section_header.rs  status_pill.rs  sub_agent_badge.rs  sub_agent_grid.rs  sub_agent_line.rs  sub_agent_token_grid.rs
frontends/dark_tui/src/ui/render/panels/: actions_panel.rs  branch_form_panel.rs  chat_panel.rs  clone_form_panel.rs  context_menu_panel.rs  core_logs_panel.rs  delete_variant_form_panel.rs  details_panel.rs  footer_panel.rs  header_panel.rs  init_product_form_panel.rs  key_bar_panel.rs  mod.rs  move_actor_form_panel.rs  spawn_form_panel.rs  ssh_panel.rs
frontends/dark_tui/src/ui/render/views/: catalog_cards.rs  catalog_tree_view.rs  graph_catalog_view.rs  mod.rs  products_view.rs  sessions_view.rs  spatial_snapshots.rs  unified_catalog_view.rs  variants_view.rs
frontends/dark_tui/src/ui/render/views/snapshots/: dark_tui__ui__render__views__spatial_snapshots__dark_tui_graphical_tree_station.snap
frontends/dark_tui/themes/: default.toml
lib/dark_rust/: Cargo.toml  build.rs  moon.yml
lib/dark_rust/src/: client.rs  error.rs  lib.rs  locator_id.rs  runtime.rs  ws_client.rs
lib/dark_rust/src/types/: actors.rs  mod.rs  opencode.rs  products.rs  system.rs  variants.rs
prisma/: moon.yml  schema.prisma
scripts/: agentbox  ci  dchat.sh.ts  dcli.sh.ts  dev.sh.ts  devcontainer  docker-build  docker_agentbox.sh.ts  docker_build.sh.ts  docker_ci.sh.ts  docker_devcontainer.sh.ts  dtui.sh.ts  export_opencode_sessions.sh.ts  install.sh.ts  moon_core.sh.ts  proto_codegen_core.sh.ts  proto_install.sh.ts  reflect_constant.sh.ts  scrape_docs.sh.ts  scrape_duckdb_docs.sh.ts  scrape_elysia_docs.sh.ts  scrape_moon_docs.sh.ts  scrape_opencode_docs.sh.ts  scrape_prisma_docs.sh.ts  sys_install.sh.ts  test.sh.ts  tui_spatial_snapshots.sh.ts
(+269 files in other folders)
