[package]
name = "dark_chat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.101", features = ["backtrace"] }
async-trait = "0.1.89"
clap = { version = "4.5.58", features = ["derive", "env"] }
crossterm = "0.29.0"
dark_tui_components = { path = "../../lib/dark_tui_components" }
futures-util = "=0.3.31"
pretty_env_logger = "0.5.0"
ratatui = "0.29.0"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
tui-scrollview = "0.5.1"
tui-textarea = "0.7.0"

[dev-dependencies]
insta = "1.43.2"
