[package]
name = "dark_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.101", features = ["backtrace"] }
clap = { version = "4.5.58", features = ["derive", "env"] }
log = { version = "0.4.29", features = ["serde"] }
pretty_env_logger = "0.5.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "1.0.1"
