[package]
name = "dark_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.101", features = ["backtrace"] }
clap = { version = "4.5.58", features = ["derive", "env"] }
dark_rust = { path = "../../lib/dark_rust" }
prettytable-rs = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "1.0.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
