[package]
name = "dark_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
anyhow = { version = "1.0.101", features = ["backtrace"] }
clap = { version = "4.5.58", features = ["derive", "env"] }
crossterm = "0.29.0"
dark_chat = { path = "../dark_chat" }
dark_rust = { path = "../../lib/dark_rust" }
dark_tui_components = { path = "../../lib/dark_tui_components" }
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
throbber-widgets-tui = "0.9.0"

[dev-dependencies]
insta = "1.43.2"
