[package]
name = "dark_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["sync", "time"] }
tokio-tungstenite = "0.27.0"
